# empyt

./: .gitignore  README.md  pyproject.toml
empyt/: __init__.py  main.py
examples/: django_example.py  fastapi_example.py  flask_example.py  http_example.py
examples/django_example/django_example/: settings.py  urls.py  views.py
examples/django_example/django_example/templates/: base.html  index.html
examples/templates/: index.html  standalone.html
