[project]
name = "empyt"
version = "0.0.1"
description = "Add real Python code to HTML templates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1",
    "jinja2>=3.1.4",
    "empyt",
]

[tool.uv]
dev-dependencies = [
  "flask>=3.0.3",
  "fastapi>=0.112.2",
  "uvicorn>=0.30.6",
]

[tool.uv.sources]
empyt = { workspace = true }
